# genericneuralnetwork

./: CMakeLists.txt  demo.cpp
include/: neuralnetwork.hpp
src/: neuralnetwork.cpp
